--- a/Planeta/Planeta.csproj
+++ b/Planeta/Planeta.csproj
@@ -6,6 +6,8 @@
 
   <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="Dapper" Version="2.0.90" />
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="3.0.0" />
   </ItemGroup>
 
   <ItemGroup>
